01_todo/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: todo-backend
spec:
  # 3 Pods should exist at all times.
  replicas: 3
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        # Run this image
        image: avvkavvk/todo_backend:latest
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service

metadata:
  name: todo-backend-service

spec:
  selector:
    app: todo-backend
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  type: LoadBalancer
