01_todo/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-mongo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-mongo
  template:
    metadata:
      labels:
        app: todo-mongo
    spec:
      containers:
      - name: todo-mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: todo-mongo-service
spec:
  selector:
    app: todo-mongo
  ports:
  - port: 27017
