01_todo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    # Captures the second group (.*) and sends only that to the backend
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific # Changed from Prefix
        backend:
          service:
            name: todo-frontend-service
            port:
              number: 3000
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific # Changed from Prefix
        backend:
          service:
            name: todo-backend-service
            port:
              number: 5000
